syntax = "proto3";

package app.v1;

option go_package = "api/app/v1;v1";

message App {
      repeated AppEntry entries = 1;
}

message AppEntry {
      string name = 1;
      string chart = 2;
      string repo = 3;
      string config = 4;
      bool enable = 5;
      string releases = 6;
      string namespace = 7;
      string id = 8;
}

message GetAppConfigRequest {
      string id = 1;
}

message GetAppConfigResponse {
      string config = 1;
}

message SaveAppConfigRequest {
      string id = 1;
      string config = 2;
}